[package]
name = "cosmic-wallust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "~1.0"
log = "~0.4"
simplelog = "~0.12"
zbus = { version = "~4.4", default-features = false, features = ["tokio"] }
cosmic-bg-config = { git = "https://github.com/pop-os/cosmic-bg" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }
cosmic-settings-daemon = { git = "https://github.com/pop-os/dbus-settings-bindings" }
palette = { version = "~0.7", features = ["serializing"] }
serde = { version = "~1.0", features = ["derive"] }
wallust = "~3.0"
clap = { version = "~4.5", features = ["derive"] }
tempfile = "~3.12"
directories = "~5.0"
tokio = { version = "~1.39", features = ["full"] }
material-colors = { version = "~0.4", features = ["image", "serde"] }
